Deleted the buttons

--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
         </div>
 
         <div id = "Overlay"></div>
-
-        <button class = "button staff">Staff</button>
-        <button class = "button Services">Services</button>
-        <button class = "button Contact">Contact</button>
+<!-- I deleted the buttons here-->>
 
     </body>
 </html>
